dodałem pokazywanie się obecnej pory dnia oraz obecnego eventu, delikatnie zmieniłem zachowanie thunderstorm oraz generacji ścian